Implementado XGBoost Regressor y agregadas algunas features nuevas

--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_csv(\"data/train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "215643"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ciudad'].value_counts()[:80].values.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def load_train():\n",
     "    df = pd.read_csv('./data/train.csv', index_col='id', parse_dates=['fecha'])\n",
     "    df = df[['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad', 'provincia', 'antiguedad',\n",
     "         'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales', 'idzona', 'fecha',\n",
     "         'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos', 'precio']]\n",
     "    \n",
-    "    whitelist = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
-    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist else 'Otro')    \n",
+    "    whitelist_tipodepropiedad = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
+    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist_tipodepropiedad else 'Otro') \n",
+    "    \n",
+    "    whitelist_ciudad = df['ciudad'].value_counts().index.to_list()[:80]\n",
+    "    df['ciudad'] = df['ciudad'].apply(lambda x: x if x in whitelist_ciudad else 'Otro') \n",
+    "\n",
     "    categoricas = ['tipodepropiedad', 'ciudad', 'provincia']\n",
     "    df[categoricas] = df[categoricas].fillna('unknown')\n",
     "    df[categoricas] = df[categoricas].astype('category')\n",
@@ -38,6 +71,13 @@
     "    \n",
     "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -60,5 +100,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
