--- a/main.ipynb
+++ b/main.ipynb
@@ -16,10 +16,11 @@
     "\n",
     "### Notebooks utilizados:\n",
     "\n",
-    "- ***feature_engineering:*** notebook donde se generarán nuevos features para luego, realizar un proceso de selección de los mejores features para cada modelo.\n",
-    "- ***pre_processing:*** notebook para el manejo de los dataframes.\n",
-    "- ***parameter_tuning:*** notebook donde se tunean los parámetros. Por tratarse de un proceso costoso temporalmente, una vez obtenidos los mejores parámetros, los guardaremos en vez de generarlos cada vez que se quieran generar los resultados.\n",
-    "- ***predict:*** notebook que se encargará de generar el csv con las predicciones finales para el modelo que se le indique.\n",
+    "- ***pre_processing:*** notebook para el manejo inicial de los dataframes.\n",
+    "- ***feature_generation:*** primer etapa del pipeline. En este notebook se generarán nuevos features para luego, realizar un proceso de selección de los mejores features para cada modelo.\n",
+    "- ***feature_selection*** segunda etapa, donde se buscara encontrar los features con mayor importancia, es decir aquellos que aporten mayor informacion.\n",
+    "- ***parameter_tuning:*** tercer etapa, notebook donde se tunean los parámetros para cada modelo.\n",
+    "- ***predict:*** finalmente, una vez obtenidos los mejores parametros y features para cada modelo, este notebook se encargará de generar el csv con las predicciones finales para el modelo que se le indique.\n",
     "\n",
     "<hr>\n"
    ]
@@ -36,16 +37,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing Jupyter notebook from pre_processing.ipynb\n",
+      "Importing Jupyter notebook from feature_generation.ipynb\n",
+      "Importing Jupyter notebook from feature_selection.ipynb\n",
+      "Importing Jupyter notebook from parameter_tuning.ipynb\n",
+      "Importing Jupyter notebook from predict.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "import nbimporter\n",
     "\n",
     "from pre_processing import load_train\n",
-    "import predict\n",
-    "import feature_engineering\n",
-    "import parameter_tuning"
+    "import feature_generation\n",
+    "import feature_selection\n",
+    "import parameter_tuning\n",
+    "import predict"
    ]
   },
   {
