--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,29 @@
     "    df = df[['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad', 'provincia', 'antiguedad',\n",
     "         'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales', 'idzona', 'fecha',\n",
     "         'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos', 'precio']]\n",
+    "    \n",
+    "    whitelist = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
+    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist else 'Otro')    \n",
+    "    categoricas = ['tipodepropiedad', 'ciudad', 'provincia']\n",
+    "    df[categoricas] = df[categoricas].fillna('unknown')\n",
+    "    df[categoricas] = df[categoricas].astype('category')\n",
+    "    enteras = ['gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos']\n",
+    "    df[enteras] = df[enteras].astype('int8')\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_test():\n",
+    "    df = pd.read_csv('./data/test.csv', index_col='id', parse_dates=['fecha'])\n",
+    "    df = df[['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad', 'provincia', 'antiguedad',\n",
+    "         'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales', 'idzona', 'fecha',\n",
+    "         'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos']]\n",
     "    \n",
     "    whitelist = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
     "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist else 'Otro')    \n",
