mergeo cambios de nico

--- a/feature_generation.ipynb
+++ b/feature_generation.ipynb
@@ -559,7 +559,16 @@
     "encoder = ce.OneHotEncoder()\n",
     "encoded = encoder.fit_transform(df2['provincia']).add_suffix(\"_ohencoded\")\n",
     "encoded.to_csv('./features/test/provincia_ohencoded.csv')\n",
-    "features['provincia_ohencoded'] = encoded.columns.values"
+    "features['provincia_ohencoded'] = encoded.columns.values\n",
+    "\n",
+    "# para ciudades\n",
+    "encoder = ce.OneHotEncoder()\n",
+    "encoded = encoder.fit_transform(df['ciudad']).add_suffix(\"_ohencoded\")\n",
+    "encoded.to_csv('./features/train/ciudad_ohencoded.csv')\n",
+    "encoder = ce.OneHotEncoder()\n",
+    "encoded = encoder.fit_transform(df2['ciudad']).add_suffix(\"_ohencoded\")\n",
+    "encoded.to_csv('./features/test/ciudad_ohencoded.csv')\n",
+    "features['ciudad_ohencoded'] = encoded.columns.values\n"
    ]
   },
   {
@@ -779,6 +788,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### MEAN Y STD DE SUPERFICIE CUBIERTA DE LA PROVINCIA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_superficie_cubierta = df[['metroscubiertos','ciudad']].copy().reset_index()\n",
+    "df_superficie_cubierta2 = df2[['metroscubiertos','ciudad']].copy().reset_index()\n",
+    "\n",
+    "avg_metroscubiertos = df_superficie_cubierta.groupby('ciudad').agg({\"metroscubiertos\":[\"mean\",\"std\"]}).reset_index()\n",
+    "avg_metroscubiertos2 = df_superficie_cubierta2.groupby('ciudad').agg({\"metroscubiertos\":[\"mean\",\"std\"]}).reset_index()\n",
+    "avg_metroscubiertos.columns = ['ciudad','metroscubiertos_mean','metroscubiertos_std']\n",
+    "avg_metroscubiertos2.columns = ['ciudad','metroscubiertos_mean','metroscubiertos_std']\n",
+    "\n",
+    "df_superficie_cubierta_mean_std = pd.merge(df_superficie_cubierta,avg_metroscubiertos,how='inner',on='ciudad').set_index('id')\n",
+    "df_superficie_cubierta_mean_std2 = pd.merge(df_superficie_cubierta2,avg_metroscubiertos2,how='inner',on='ciudad').set_index('id')\n",
+    "\n",
+    "df_superficie_cubierta_mean_std = df_superficie_cubierta_mean_std[[\"metroscubiertos_mean\",\"metroscubiertos_std\"]]\n",
+    "df_superficie_cubierta_mean_std2 = df_superficie_cubierta_mean_std2[[\"metroscubiertos_mean\",\"metroscubiertos_std\"]]\n",
+    "\n",
+    "df_superficie_cubierta_mean_std.to_csv('./features/train/superficie_mean_std.csv')\n",
+    "df_superficie_cubierta_mean_std2.to_csv('./features/test/superficie_mean_std.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### BINNING (+OHE)"
    ]
   },
@@ -875,13 +915,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Full DF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_engineered_train():\n",
+    "    df = load_train()\n",
+    "    df = df[[\"centroscomercialescercanos\",\"escuelascercanas\",\"metroscubiertos\",\"metrostotales\",\"banos\",\"antiguedad\",\"habitaciones\",\"garages\",\"piscina\",\"gimnasio\",\"precio\"]]\n",
+    "    \n",
+    "    #Agregado de anio-mes en one hot encoding\n",
+    "    df_aniomes_ohencoded = pd.read_csv(\"features/aniomes_ohencoded.csv\", index_col='id')\n",
+    "    df = pd.merge(df,df_aniomes_ohencoded,how='left',left_index=True, right_index=True)\n",
+    "    \n",
+    "    #Agregado de provincia en one hot encoding\n",
+    "    df_provincia_ohencoded = pd.read_csv(\"features/provincia_ohencoded.csv\", index_col='id')\n",
+    "    df = pd.merge(df,df_provincia_ohencoded,how='left',left_index=True, right_index=True)\n",
+    "    \n",
+    "    #Agregado de tipodepropiedad en one hot encoding\n",
+    "    df_tipo_ohencoded = pd.read_csv(\"features/tipodepropiedad_ohencoded.csv\", index_col='id')\n",
+    "    df = pd.merge(df,df_tipo_ohencoded,how='left',left_index=True, right_index=True)\n",
+    "    \n",
+    "    #Agregado de ciudad en one hot encoding\n",
+    "    df_ciudad_ohencoded = pd.read_csv(\"features/ciudad_ohencoded.csv\", index_col='id')\n",
+    "    df = pd.merge(df,df_ciudad_ohencoded,how='left',left_index=True, right_index=True)\n",
+    "    \n",
+    "    \n",
+    "    #Agregado de features obtenidos de la descripcion\n",
+    "    df_descripcion = pd.read_csv(\"features/descripcion.csv\", index_col='id')\n",
+    "    df = pd.merge(df,df_descripcion,how='left',left_index=True, right_index=True)\n",
+    "    \n",
+    "        \n",
+    "    #Agregado de superficie mean y std por provincia\n",
+    "    df_datos_superficie = pd.read_csv(\"features/superficie_mean_std.csv\", index_col='id')\n",
+    "    df = pd.merge(df,df_datos_superficie,how='left',left_index=True, right_index=True)\n",
+    "\n",
+    "    \n",
+    "    df = df.reset_index()\n",
+    "    df.pop('id')\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Resultados"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
