--- a/main.ipynb
+++ b/main.ipynb
@@ -32,7 +32,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_absolute_error"
    ]
   },
   {
@@ -164,7 +167,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ..."
+    "import xgboost\n",
+    "df_train = feature_engineering.load_engineered_dataset()\n",
+    "\n",
+    "X = df_train.values\n",
+    "Y = df_train.pop('precio').values\n",
+    "X_train, X_val, Y_train, Y_val = train_test_split(X, Y, test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg = xgboost.XGBRegressor(max_depth=10,n_estimators=120 ,learning_rate=0.1, verbosity=2,subsample=0.9, min_child_weight=10)\n",
+    "reg.fit(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_pred = reg.predict(X_val)\n",
+    "mean_absolute_error(Y_val,Y_pred)"
    ]
   },
   {
