--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -28,8 +28,12 @@
     "         'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales', 'idzona', 'fecha',\n",
     "         'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos', 'precio']]\n",
     "    \n",
-    "    whitelist = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
-    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist else 'Otro')    \n",
+    "    whitelist_tipodepropiedad = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
+    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist_tipodepropiedad else 'Otro') \n",
+    "    \n",
+    "    whitelist_ciudad = df['ciudad'].value_counts().index.to_list()[:80]\n",
+    "    df['ciudad'] = df['ciudad'].apply(lambda x: x if x in whitelist_ciudad else 'Otro')\n",
+    "    \n",
     "    categoricas = ['tipodepropiedad', 'ciudad', 'provincia']\n",
     "    df[categoricas] = df[categoricas].fillna('unknown')\n",
     "    df[categoricas] = df[categoricas].astype('category')\n",
@@ -50,6 +54,12 @@
     "    df = df[['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad', 'provincia', 'antiguedad',\n",
     "         'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales', 'idzona', 'fecha',\n",
     "         'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos']]\n",
+    "    \n",
+    "    whitelist_tipodepropiedad = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
+    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist_tipodepropiedad else 'Otro') \n",
+    "    \n",
+    "    whitelist_ciudad = df['ciudad'].value_counts().index.to_list()[:80]\n",
+    "    df['ciudad'] = df['ciudad'].apply(lambda x: x if x in whitelist_ciudad else 'Otro')\n",
     "    \n",
     "    whitelist = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
     "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist else 'Otro')    \n",
