--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -27,22 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "215643"
+       "Index(['id', 'titulo', 'descripcion', 'tipodepropiedad', 'direccion', 'ciudad',\n",
+       "       'provincia', 'antiguedad', 'habitaciones', 'garages', 'banos',\n",
+       "       'metroscubiertos', 'metrostotales', 'idzona', 'lat', 'lng', 'fecha',\n",
+       "       'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas',\n",
+       "       'centroscomercialescercanos', 'precio'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['ciudad'].value_counts()[:80].values.sum()"
+    "df.columns"
    ]
   },
   {
@@ -71,13 +76,6 @@
     "    \n",
     "    return df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
