--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,46 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"data/train.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'titulo', 'descripcion', 'tipodepropiedad', 'direccion', 'ciudad',\n",
-       "       'provincia', 'antiguedad', 'habitaciones', 'garages', 'banos',\n",
-       "       'metroscubiertos', 'metrostotales', 'idzona', 'lat', 'lng', 'fecha',\n",
-       "       'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas',\n",
-       "       'centroscomercialescercanos', 'precio'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_train():\n",
-    "    df = pd.read_csv('./data/train.csv', index_col='id', parse_dates=['fecha'])\n",
+    "def load_appended_dataset():\n",
+    "    \"\"\"Carga ambos dataframes (train y test) y devuelve un solo dataframe que es el resultado de realizar un\n",
+    "    append entre ambos. El dataset de test esta al final.\"\"\"\n",
+    "\n",
+    "    train = pd.read_csv('./data/train.csv', index_col='id', parse_dates=['fecha'])\n",
+    "    test = pd.read_csv('./data/test.csv', index_col='id', parse_dates=['fecha'])\n",
+    "    df = train.append(test, sort=False)\n",
     "    df = df[['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad', 'provincia', 'antiguedad',\n",
     "         'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales', 'idzona', 'fecha',\n",
     "         'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos', 'precio']]\n",
@@ -79,31 +50,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_test():\n",
-    "    df = pd.read_csv('./data/test.csv', index_col='id', parse_dates=['fecha'])\n",
-    "    df = df[['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad', 'provincia', 'antiguedad',\n",
-    "         'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales', 'idzona', 'fecha',\n",
-    "         'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos']]\n",
+    "def separate_train_test(df):\n",
+    "    \"\"\"Separa df compuesto por sus primeras 240.000 filas de train.csv y sus 60.000 ultimas filas de test\n",
+    "    en los dos dataframes correspondientes.\"\"\"\n",
     "    \n",
-    "    whitelist_tipodepropiedad = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
-    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist_tipodepropiedad else 'Otro') \n",
+    "    train = df.head(240000)\n",
+    "    test = df.tail(60000).drop('precio', axis=1)\n",
+    "    return train, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_datasets():\n",
+    "    \"\"\"Carga ambos dataframes (train y test) y devuelve dos datasets en el formato:\n",
+    "    train_df, test_df\"\"\"\n",
     "    \n",
-    "    whitelist_ciudad = df['ciudad'].value_counts().index.to_list()[:80]\n",
-    "    df['ciudad'] = df['ciudad'].apply(lambda x: x if x in whitelist_ciudad else 'Otro')\n",
-    "    \n",
-    "    whitelist = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
-    "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist else 'Otro')    \n",
-    "    categoricas = ['tipodepropiedad', 'ciudad', 'provincia']\n",
-    "    df[categoricas] = df[categoricas].fillna('unknown')\n",
-    "    df[categoricas] = df[categoricas].astype('category')\n",
-    "    enteras = ['gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas', 'centroscomercialescercanos']\n",
-    "    df[enteras] = df[enteras].astype('int8')\n",
-    "    \n",
-    "    return df"
+    "    df = load_appended_dataset()\n",
+    "    return separate_train_test(df)"
    ]
   }
  ],
