--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -9,10 +9,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing Jupyter notebook from pre_processing.ipynb\n",
+      "Importing Jupyter notebook from feature_generation.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nbimporter\n",
+    "\n",
+    "from pre_processing import load_appended_dataset, separate_train_test, load_datasets\n",
+    "from feature_generation import load_featured_appended_dataset, load_featured_datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Seleccion de K Mejores Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import f_regression\n",
+    "from sklearn.feature_selection import mutual_info_regression\n",
+    "from sklearn.feature_selection import SelectKBest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train,test = load_featured_datasets()\n",
+    "train.drop(['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad',\n",
+    "               'provincia', 'fecha', 'metrostotales'], axis=1, inplace=True)\n",
+    "test.drop(['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad',\n",
+    "               'provincia', 'fecha', 'metrostotales'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.fillna(train.mean(),inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = train.drop('precio', axis=1).values\n",
+    "Y = train['precio'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(240000, 226)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Selector = SelectKBest(f_regression, k=150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SelectKBest(k=150, score_func=<function f_regression at 0x7fa55a8d6378>)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Selector.fit(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def k_features_selector(k_features,train_df):\n",
+    "    train_na_filled_df = train_df.fillna(train_df.mean())\n",
+    "    X = train_na_filled_df.drop('precio', axis=1).values\n",
+    "    Y = train_na_filled_df['precio'].values\n",
+    "    Selector = SelectKBest(f_regression, k=k_features)\n",
+    "    Selector.fit(X,Y)\n",
+    "    return Selector"
+   ]
   }
  ],
  "metadata": {
@@ -35,5 +173,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
