agrego cotizacion dolar en fase beta

--- a/feature_generation.ipynb
+++ b/feature_generation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,21 +604,211 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### COTIZACION DEL USD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cotizacion = df_fecha[['aniomes']].copy().reset_index()\n",
+    "\n",
+    "# Cargamos el dataset preprocesado en pre_processing.\n",
+    "usd = pd.read_csv('data/usd_mxn_featured')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "usd = usd[['aniomes', 'usd_mxn', 'mxn_usd']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df_cotizacion = pd.merge(df_cotizacion, usd, on='aniomes', how='inner').drop('aniomes', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cotizacion.set_index('id', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>usd_mxn</th>\n",
+       "      <th>mxn_usd</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>254099</td>\n",
+       "      <td>16.55105</td>\n",
+       "      <td>0.060419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18684</td>\n",
+       "      <td>16.55105</td>\n",
+       "      <td>0.060419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>81195</td>\n",
+       "      <td>16.55105</td>\n",
+       "      <td>0.060419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14228</td>\n",
+       "      <td>16.55105</td>\n",
+       "      <td>0.060419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>46540</td>\n",
+       "      <td>16.55105</td>\n",
+       "      <td>0.060419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>131588</td>\n",
+       "      <td>12.71043</td>\n",
+       "      <td>0.078676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5686</td>\n",
+       "      <td>12.71043</td>\n",
+       "      <td>0.078676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>234506</td>\n",
+       "      <td>12.71043</td>\n",
+       "      <td>0.078676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>116686</td>\n",
+       "      <td>12.71043</td>\n",
+       "      <td>0.078676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>72612</td>\n",
+       "      <td>12.71043</td>\n",
+       "      <td>0.078676</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         usd_mxn   mxn_usd\n",
+       "id                        \n",
+       "254099  16.55105  0.060419\n",
+       "18684   16.55105  0.060419\n",
+       "81195   16.55105  0.060419\n",
+       "14228   16.55105  0.060419\n",
+       "46540   16.55105  0.060419\n",
+       "...          ...       ...\n",
+       "131588  12.71043  0.078676\n",
+       "5686    12.71043  0.078676\n",
+       "234506  12.71043  0.078676\n",
+       "116686  12.71043  0.078676\n",
+       "72612   12.71043  0.078676\n",
+       "\n",
+       "[300000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cotizacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cotizacion.to_csv('./features/cotizacion.csv')\n",
+    "features['cotizacion'] = df_cotizacion.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Full DF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['categoricas_labelencoded', 'tipodepropiedad_ohencoded', 'provincia_ohencoded', 'ciudad_ohencoded', 'fecha', 'aniomes_ohencoded', 'descripcion', 'antiguedad_binning', 'habitaciones_binning'])"
+       "dict_keys(['categoricas_labelencoded', 'tipodepropiedad_ohencoded', 'provincia_ohencoded', 'ciudad_ohencoded', 'fecha', 'aniomes_ohencoded', 'descripcion', 'antiguedad_binning', 'habitaciones_binning', 'cotizacion'])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +830,8 @@
     "    df = load_appended_dataset()\n",
     "    # archivos (features.keys())\n",
     "    files = ['categoricas_labelencoded', 'tipodepropiedad_ohencoded', 'provincia_ohencoded', 'ciudad_ohencoded',\n",
-    "             'fecha', 'aniomes_ohencoded', 'descripcion', 'antiguedad_binning', 'habitaciones_binning']\n",
+    "             'fecha', 'aniomes_ohencoded', 'descripcion', 'antiguedad_binning', 'habitaciones_binning',\n",
+    "             'cotizacion']\n",
     "    for file in files:\n",
     "        ruta = \"features/\"+file+\".csv\"\n",
     "        add = pd.read_csv(ruta, index_col='id')\n",
@@ -651,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
