refactor en feature engineering

--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,8 +34,7 @@
    "source": [
     "import nbimporter\n",
     "\n",
-    "from pre_processing import load_appended_dataset, separate_train_test, load_datasets\n",
-    "from feature_generation import load_featured_appended_dataset, load_featured_datasets"
+    "from pre_processing import load_appended_dataset, separate_train_test, load_datasets, load_featured_datasets, load_featured_appended_dataset "
    ]
   },
   {
@@ -58,20 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train,test = load_featured_datasets()\n",
-    "train.drop(['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad',\n",
-    "               'provincia', 'fecha', 'metrostotales'], axis=1, inplace=True)\n",
-    "test.drop(['titulo', 'descripcion', 'direccion', 'tipodepropiedad', 'ciudad',\n",
-    "               'provincia', 'fecha', 'metrostotales'], axis=1, inplace=True)"
+    "train,test = load_featured_datasets()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(240000, 226)"
+       "(240000, 136)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,25 +105,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Selector = SelectKBest(f_regression, k=150)"
+    "Selector = SelectKBest(f_regression, k=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/univariate_selection.py:299: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  corr /= X_norms\n",
+      "/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/univariate_selection.py:299: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  corr /= X_norms\n",
+      "/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/univariate_selection.py:304: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  F = corr ** 2 / (1 - corr ** 2) * degrees_of_freedom\n",
+      "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:901: RuntimeWarning: invalid value encountered in greater\n",
+      "  return (a < x) & (x < b)\n",
+      "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:901: RuntimeWarning: invalid value encountered in less\n",
+      "  return (a < x) & (x < b)\n",
+      "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:1892: RuntimeWarning: invalid value encountered in less_equal\n",
+      "  cond2 = cond0 & (x <= _a)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "SelectKBest(k=150, score_func=<function f_regression at 0x7fa55a8d6378>)"
+       "SelectKBest(k=50, score_func=<function f_regression at 0x7f29add1a7b8>)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +164,13 @@
     "    Selector.fit(X,Y)\n",
     "    return Selector"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
