--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -9,16 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nbimporter\n",
+    "import feature_generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = feature_generation.get_features()\n",
+    "features_types = feature_generation.get_features_types()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +57,8 @@
     "    whitelist_tipodepropiedad = df['tipodepropiedad'].value_counts().index.to_list()[:9]\n",
     "    df['tipodepropiedad'] = df['tipodepropiedad'].apply(lambda x: x if x in whitelist_tipodepropiedad else 'Otro') \n",
     "    \n",
-    "    whitelist_ciudad = df['ciudad'].value_counts().index.to_list()[:80]\n",
-    "    df['ciudad'] = df['ciudad'].apply(lambda x: x if x in whitelist_ciudad else 'Otro')\n",
+    "    #whitelist_ciudad = df['ciudad'].value_counts().index.to_list()[:80]\n",
+    "    #df['ciudad'] = df['ciudad'].apply(lambda x: x if x in whitelist_ciudad else 'Otro')\n",
     "    \n",
     "    categoricas = ['tipodepropiedad', 'ciudad', 'provincia']\n",
     "    df[categoricas] = df[categoricas].fillna('unknown')\n",
@@ -50,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +95,42 @@
     "    train_df, test_df\"\"\"\n",
     "    \n",
     "    df = load_appended_dataset()\n",
+    "    return separate_train_test(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_featured_appended_dataset():\n",
+    "    \"\"\"Carga el .csv con los features generados, y lo formatea para ahorrar memoria. Devuelve un unico\n",
+    "    dataframe cuyas primeras 240.000 filas son de train.csv y sus ultimas 60.000 de test.\"\"\"\n",
+    "    features_types = feature_generation.get_features_types()\n",
+    "    \n",
+    "    df = pd.read_csv('./data/full_featured.csv', index_col='id')\n",
+    "    df[features_types['bernoulli']] = df[features_types['bernoulli']].astype('uint8')\n",
+    "    df[features_types['float']] = df[features_types['float']].astype('float')\n",
+    "    df[features_types['uint8']] = df[features_types['uint8']].astype('uint8')\n",
+    "    df[features_types['uint16']] = df[features_types['uint16']].astype('uint16')\n",
+    "    df[features_types['uint32']] = df[features_types['uint32']].astype('uint32')\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_featured_datasets():\n",
+    "    \"\"\"Devuelve dos datasets en el formato:\n",
+    "    train_df, test_df\n",
+    "    Para los datasets con las features generadas.\"\"\"\n",
+    "    \n",
+    "    df = load_featured_appended_dataset()\n",
     "    return separate_train_test(df)"
    ]
   }
